--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -25,12 +25,20 @@
     width: 60%;
 }
 
-.width100 {
+.width100, .mat-form-field {
     width: 100%;
+}
+
+.width80 {
+    width: 80%;
 }
 
 .marginTop2 {
     margin-top: 2em;
+}
+
+.marginTopBottom2 {
+    margin: 2em 0;
 }
 
 .loginH1 {
@@ -60,32 +68,46 @@
     font-weight: bold;
 }
 
+.logoText {
+    font-size: larger;
+    text-align: center;
+}
+
 .toolBar {
     height: 5em;
+    background: var(--primaryColor);
 }
 
 .homeTabGroup {
-    height: calc(100% - 7em);
+    height: calc(100% - 9em);
 }
 
 .homeTabGroup .mat-tab-body-wrapper, .tabInnerContainer {
-    height: 100%
+    min-height: 95%
+}
+
+.mat-tab-group.mat-primary .mat-ink-bar, .mat-tab-nav-bar.mat-primary .mat-ink-bar {
+    background-color: var(--primaryBackground);
 }
 
 .userDetails {
-    margin: .3em;
+    margin: .1em .3em;
     font-size: large;
     font-weight: bold;
     font-style: italic;
 }
 
 .balance {
-    height: 15em;
-    width: 15em;
+    height: 12em;
+    width: 12em;
     border-radius: 50%;
     background: var(--primaryBackground);
     border: solid var(--primaryBackgroundLight) 5px;
     color: var(--secondaryColor);
+}
+
+.amount {
+    font-size: larger;
 }
 
 .transactions {
@@ -93,4 +115,17 @@
     border: solid var(--primaryBackgroundLight) 3px;
     color: var(--secondaryColor);
     border-radius: 20px;
+}
+
+.transactContainer {
+    margin-bottom: 1em;
+}
+
+.errorMsg {
+    margin-top: -10px;
+    color: var(--errorMessage);
+}
+
+.transCards {
+    background: var(--primaryBackgroundLight);
 }
