Edited the app name

--- a/app/src/app/components/homeComponent/home.template.html
+++ b/app/src/app/components/homeComponent/home.template.html
@@ -2,7 +2,7 @@
   <div fxLayout="column wrap" class="maxHeight" fxFlex="100" fxLayoutAlign="start stretch" fxShow="true" fxHide="false">
     <div fxLayout="row wrap" class="toolBar" fxLayoutAlign="center center" fxShow="true" fxHide="false">
       <div fxLayout="column wrap" fxFlex="50" fxLayoutAlign="start stretch" fxShow="true" fxHide="false">
-        <h2 class="logoText">Clain In My Pocket</h2>
+        <h2 class="logoText">Claim In My Pocket</h2>
       </div>
     </div>
     <mat-tab-group class="homeTabGroup marginTop2" mat-stretch-tabs>
