Changed some ui colors

--- a/app/src/app/components/loginComponent/login.template.html
+++ b/app/src/app/components/loginComponent/login.template.html
@@ -4,7 +4,7 @@
       <div fxLayout="row wrap" fxLayoutAlign="center center" fxShow="true" fxHide="false">
         <h1 class="loginH1">Register</h1>
       </div>
-      <div fxLayout="column wrap" fxLayoutAlign="center center" fxShow="true" fxHide="false">
+      <div fxLayout="column wrap" class="loginForm" fxLayoutAlign="center center" fxShow="true" fxHide="false">
         <div fxLayout="column wrap" class="width60" fxLayoutAlign="start stretch" fxShow="true" fxHide="false">
           <mat-form-field>
             <input matInput [(ngModel)]="register.name" name="name" placeholder="Name" required>
